--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "veryfasttree"
-version = "4.0.3+1"
-description = "An OpenMP Implementation for Python"
+version = "4.0.3.1"
+description = "Efficient phylogenetic tree inference for massive taxonomic datasets"
 license = "LGPL-3.0-only"
 authors = [
     "Cesar Pomar <cesaralfredo.pineiro@usc.es>",
